<?xml version="1.0" encoding="utf-8"?>
<resources>
    <public name="cloud_payments_sdk" type="string">CloudPaymentsSDK</public>
    <string name="cpsdk_text_splash_screen_loader">Загружаем способы оплаты</string>
    <string name="cpsdk_text_options_title">Выберите способ оплаты</string>
    <string name="cpsdk_text_options_card">Банковская карта</string>
    <string name="cpsdk_text_options_save_card">Сохранить данные карты или счета</string>
    <string name="cpsdk_text_options_save_card_popup_1">После оплаты ваша карта сохранится. В следующий раз вам не понадобится вводить данные карты.</string>
    <string name="cpsdk_text_options_save_card_popup_2">Это удобно и экономит время.</string>
    <string name="cpsdk_text_options_email_checkbox">Отправить квитанцию на E-mail</string>
    <string name="cpsdk_text_options_email_title">E-mail</string>
    <string name="cpsdk_text_options_email_empty">Для оплаты введите E-mail</string>
    <string name="cpsdk_text_options_email_error">Введите верный E-mail</string>
    <string name="cpsdk_text_options_card_be_saved">При оплате данные карты сохранятся</string>

    <string name="cpsdk_text_card_title">Оплата картой</string>
    <string name="cpsdk_text_card_hint_number">Номер карты</string>
    <string name="cpsdk_text_card_hint_exp">Срок действия</string>
    <string name="cpsdk_text_card_hint_cvv">CVV/CVC</string>
    <string name="cpsdk_text_card_pay_button">Оплатить</string>
    <string name="cpsdk_text_card_pay_button_with_sum">Оплатить %s</string>

    <string name="cpsdk_text_process_title">Оплата в процессе</string>
    <string name="cpsdk_text_process_title_success">Оплата прошла успешно</string>
    <string name="cpsdk_text_process_button_success">Отлично!</string>
    <string name="cpsdk_text_process_title_error">Операция отклонена</string>
    <string name="cpsdk_text_process_button_error">Повторить попытку</string>
    <string name="cpsdk_text_process_button_ok">OK</string>
    <string name="cpsdk_text_process_button_close">Закрыть</string>

    <string name="cpsdk_text_t_pay_title">Ждем ответа\noт Т-Pay</string>
    <string name="cpsdk_text_sber_pay_title">Ждем ответа\noт SberPay</string>
    <string name="cpsdk_text_mir_pay_title">Ждем ответа\noт MirPay</string>
    <string name="cpsdk_text_alt_pays_description">Если перейти и оплатить в приложении не удалось, попробуйте снова или выберите другой способ оплаты</string>
    <string name="cpsdk_text_alt_pays_no_bank_app">Невозможно запустить приложение банка, используйте другой способ оплаты</string>

    <string name="cpsdk_text_process_button_tpay_sberpay_sbp">Выбрать способ оплаты</string>





    <!-- NEW NEW NEW NEW -->
    <string name="cpsdk_currency_template">%.2f\u20BD</string>

    <!-- SELECT PAYMENT METHOD -->
    <string name="cpsdk_text_select_payment_method_title">Выберите способ оплаты</string>
    <string name="cpsdk_text_select_payment_method_card">Банковской картой</string>
    <string name="cpsdk_text_select_payment_method_other_methods">Другие способы</string>
    <string name="cpsdk_text_select_payment_method_collapse">Свернуть</string>

    <!-- SBP -->
    <string name="cpsdk_text_sbp_title">Выберите банк\nдля подтверждения оплаты</string>
    <string name="cpsdk_text_sbp_no_banks_apps">На устройстве нет банковских\nприложений</string>
    <string name="cpsdk_text_sbp_no_bank_app">Отсутсвует приложение, выберете другой банк для оплаты</string>
    <string name="cpsdk_text_sbp_search_bank">Поиск банка</string>
    <string name="cpsdk_text_sbp_not_found_bank">Ничего не найдено</string>

    <!-- ALT PAY -->
    <string name="cpsdk_text_alt_pay_title">Ждем ответа от</string>
    <string name="cpsdk_text_alt_pay_sbp_title">Ждем ответа от банка</string>
    <string name="cpsdk_text_alt_pay_description">Если перейти и оплатить в приложении не удалось, попробуйте снова или выберите другой способ оплаты</string>
    <string name="cpsdk_text_alt_pay_button_select_payment_method">Выбрать способ оплаты</string>

    <!-- FINAL -->
    <string name="cpsdk_text_final_success">Оплата прошла успешно</string>
    <string name="cpsdk_text_final_already_paid">Этот заказ уже оплачен</string>
    <string name="cpsdk_text_final_success_extra">Оплата заказа</string>
    <string name="cpsdk_text_final_close">Вернуться в магазин</string>
    <string name="cpsdk_text_final_retry">Повторить попытку</string>


    <!-- ERRORS -->
    <string name="cpsdk_error_connection">Отсутствует соединение с сервером</string>
    <string name="cpsdk_error_connection_extra">Проверьте Ваше подключение к Интернету</string>

    <string name="cpsdk_error_3001">Неверный номер заказа</string>
    <string name="cpsdk_error_3002">Некорректный идентификатор плательщика</string>
    <string name="cpsdk_error_3003">Неверная сумма</string>
    <string name="cpsdk_error_3004">Платеж просрочен</string>
    <string name="cpsdk_error_3005">Платеж не может быть принят</string>
    <string name="cpsdk_error_3006">Сервис недоступен</string>
    <string name="cpsdk_error_3007">Ошибка соединения</string>
    <string name="cpsdk_error_3008">Платеж не может быть принят</string>
    <string name="cpsdk_error_5001">Отказ эмитента проводить онлайн операцию</string>
    <string name="cpsdk_error_5005">Операция отклонена эмитентом</string>
    <string name="cpsdk_error_5006">Отказ сети проводить операцию или неправильный CVV код</string>
    <string name="cpsdk_error_5012">Карта не предназначена для онлайн платежей</string>
    <string name="cpsdk_error_5013">Слишком маленькая или слишком большая сумма операции</string>
    <string name="cpsdk_error_5030">Ошибка на стороне эквайера</string>
    <string name="cpsdk_error_5031">Неизвестный эмитент карты</string>
    <string name="cpsdk_error_5034">Отказ эмитента</string>
    <string name="cpsdk_error_5041">Карта потеряна</string>
    <string name="cpsdk_error_5043">Карта украдена</string>
    <string name="cpsdk_error_5051">Недостаточно средств на карте</string>
    <string name="cpsdk_error_5054">Карта просрочена или неверно указан срок действия</string>
    <string name="cpsdk_error_5057">Ограничение на карте</string>
    <string name="cpsdk_error_5061">Не удалось выполнить оплату: превышен лимит по карте</string>
    <string name="cpsdk_error_5065">Превышен лимит операций по карте</string>
    <string name="cpsdk_error_5082">Неверный CVV код</string>
    <string name="cpsdk_error_5091">Эмитент недоступен</string>
    <string name="cpsdk_error_5092">Эмитент недоступен</string>
    <string name="cpsdk_error_5096">Ошибка банка-эквайера или сети</string>
    <string name="cpsdk_error_5204">Операция не может быть обработана</string>
    <string name="cpsdk_error_5206">3-D Secure авторизация не пройдена</string>
    <string name="cpsdk_error_5207">3-D Secure авторизация недоступна</string>
    <string name="cpsdk_error_5300">Лимиты эквайера на проведение операций</string>
    <string name="cpsdk_error_3001_extra">Платеж будет отклонен</string>
    <string name="cpsdk_error_3002_extra">Платеж будет отклонен</string>
    <string name="cpsdk_error_3003_extra">Обратитесь в поддержку сайта</string>
    <string name="cpsdk_error_3004_extra">Обратитесь в поддержку сайта</string>
    <string name="cpsdk_error_3005_extra">Платеж будет отклонен</string>
    <string name="cpsdk_error_3006_extra">Платеж будет отклонен. Попробуйте позже</string>
    <string name="cpsdk_error_3007_extra">Платеж будет отклонен. Попробуйте позже</string>
    <string name="cpsdk_error_3008_extra">Платеж будет отклонен</string>
    <string name="cpsdk_error_5001_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5005_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5006_extra">Проверьте правильность введенных данных карты или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5012_extra">Воспользуйтесь другой картой или свяжитесь с банком, выпустившим карту</string>
    <string name="cpsdk_error_5013_extra">Проверьте корректность суммы</string>
    <string name="cpsdk_error_5030_extra">Повторите попытку позже</string>
    <string name="cpsdk_error_5031_extra">Воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5034_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5041_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5043_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5051_extra"></string>
    <string name="cpsdk_error_5054_extra">Проверьте правильность введенных данных карты или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5057_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5061_extra">Превышение лимита оплаты по карте. Измените настройки лимита или оплатите другой картой</string>
    <string name="cpsdk_error_5065_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5082_extra">Проверьте правильность введенных данных карты или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5091_extra">Повторите попытку позже или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5092_extra">Повторите попытку позже или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5096_extra">Повторите попытку позже</string>
    <string name="cpsdk_error_5204_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5206_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5207_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="cpsdk_error_5300_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
</resources>