<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/image_drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        style="@style/cpsdk_TextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpsdk_text_options_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_drag_handle" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title"/>

    <View
        android:id="@+id/view_block_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/cpsdk_BlockButtonView"
        app:layout_constraintBottom_toBottomOf="@id/layout_buttons"
        app:layout_constraintEnd_toEndOf="@id/layout_buttons"
        app:layout_constraintStart_toStartOf="@id/layout_buttons"
        app:layout_constraintTop_toTopOf="@id/layout_buttons" />

    <TextView
        android:id="@+id/text_save_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center_vertical"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6sp"
        android:paddingStart="10dp"
        android:text="@string/cpsdk_text_options_save_card"
        android:textColor="@color/cpsdk_black2"
        android:textSize="14sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_buttons" />

    <ImageView
        android:id="@+id/button_save_card_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/cpsdk_ic_help"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/text_save_card"
        app:layout_constraintStart_toEndOf="@id/text_save_card" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/material_switch_save_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/cpsdk_Switch"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/text_save_card" />

    <TextView
        android:id="@+id/text_send_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center_vertical"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6sp"
        android:paddingStart="10dp"
        android:text="@string/cpsdk_text_options_email_checkbox"
        android:textColor="@color/cpsdk_black2"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_save_card" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/material_switch_send_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/cpsdk_Switch"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/text_send_receipt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_email"
        style="@style/cpsdk_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/cpsdk_text_options_email_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_send_receipt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            style="@style/cpsdk_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="5sp"
        android:textColor="#E33333"
        android:textSize="13sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_email" />

    <ImageView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cpsdk_margin_big"
        android:src="@drawable/cpsdk_secured_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email_error" />
</androidx.constraintlayout.widget.ConstraintLayout>
